[package]
name = "ray_tracing_in_one_weekend"
version = "1.0.0"
authors = ["HiraokaTakuya <hiraoka64@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.3", default-features = false }
rand_xoshiro = "0.6.0"
js-sys = "0.3.40"
wasm-bindgen = "0.2.63"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'ImageData',
  'Performance',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
